--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -223,12 +223,12 @@
                         <p class="text-gray-600 text-sm mb-4">
                         Our mission is to ignite problem-solvers, innovators, and changemakers by blending the best of technology, design thinking, and real-world skill mastery. At DecipherWorld we believe in transforming classrooms into living laboratories of innovation — where teachers are empowered, students are inspired, and learning becomes a journey of discovery.
                         </p>
-                        <p class="text-gray-600 text-sm mb-4">
+                       <!-- <p class="text-gray-600 text-sm mb-4">
                             Throughout my career, I’ve led initiatives that turn learning into a strategic growth driver — driving measurable impact, performance, and innovation across diverse industries. What drives me is not just building programs or platforms, but designing experiences that unlock potential and turn curiosity into capability.
                         </p>
                         <p class="text-gray-600 text-sm mb-4">
                             Because true leadership isn’t about control — it’s about creating ecosystems where people can learn, grow, and lead transformation themselves.
-                        </p>
+                        </p>-->
                         <div class="text-gray-600 text-sm mb-4 italic">
                             "I don’t just build learning systems — I build the future of how people learn, think, and create "
                         </div>
